给index.html的script标签增加defer标签

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <% } %>
     <!-- 使用CDN的JS文件 -->
     <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.js) { %>
-      <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
+      <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>" defer></script>
     <% } %>
     <title><%= webpackConfig.name %></title>
   </head>
